--- a/index.html
+++ b/index.html
@@ -1,41 +1,64 @@
+# git commit -am "Descrição das mudanças"
+# git push origin main
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Gabriel Castro | Portfólio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            text-align: center;
-            background-color: #f4f4f4;
-        }
-        header {
-            background-color: #333;
-            color: white;
-            padding: 20px;
-        }
-        section {
-            margin: 20px;
-            padding: 20px;
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
-        }
-        .container {
-            max-width: 800px;
-            margin: auto;
-        }
-        .social-links a {
-            margin: 0 10px;
-            text-decoration: none;
-            color: #333;
-        }
-    </style>
 </head>
 <body>
 
     <header>
-        <h1>Gab
+        <h1>Gabriel Castro</h1>
+        <p>Desenvolvedor | Freelancer</p>
+        <nav>
+            <ul>
+                <li><a href="#sobre">Sobre</a></li>
+                <li><a href="#projetos">Projetos</a></li>
+                <li><a href="#habilidades">Habilidades</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
+    </header>
+
+    <main>
+        <section id="sobre">
+            <h2>Sobre Mim</h2>
+            <p>Sou Gabriel Castro, desenvolvedor apaixonado por tecnologia e inovação. Tenho experiência em diversas áreas da programação e estou sempre buscando novos desafios.</p>
+        </section>
+
+        <section id="projetos">
+            <h2>Projetos</h2>
+            <ul>
+                <li><strong>Projeto 1:</strong> Descrição do projeto.</li>
+                <li><strong>Projeto 2:</strong> Descrição do projeto.</li>
+                <li><strong>Projeto 3:</strong> Descrição do projeto.</li>
+            </ul>
+        </section>
+
+        <section id="habilidades">
+            <h2>Habilidades</h2>
+            <ul>
+                <li>Desenvolvimento Web (HTML, CSS, JavaScript)</li>
+                <li>Programação (Python, Java, C++)</li>
+                <li>Banco de Dados (MySQL, PostgreSQL)</li>
+                <li>Criação de Bots e Automação</li>
+            </ul>
+        </section>
+
+        <section id="contato">
+            <h2>Contato</h2>
+            <p>Email: <a href="mailto:seuemail@example.com">seuemail@example.com</a></p>
+            <p>GitHub: <a href="https://github.com/castruti" target="_blank">github.com/castruti</a></p>
+            <p>LinkedIn: <a href="https://linkedin.com/in/seu-perfil" target="_blank">linkedin.com/in/seu-perfil</a></p>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2025 Gabriel Castro. Todos os direitos reservados.</p>
+    </footer>
+
+</body>
+</html>
