--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
 
         <section id="contato">
             <h2>Contato</h2>
-            <p>Email: <a href="mailto:seuemail@example.com">seuemail@example.com</a></p>
+            <p>Email: <a href="mailto:g_castro2001@hotmail.com">seuemail@example.com</a></p>
             <p>GitHub: <a href="https://github.com/castruti" target="_blank">github.com/castruti</a></p>
-            <p>LinkedIn: <a href="https://linkedin.com/in/seu-perfil" target="_blank">linkedin.com/in/seu-perfil</a></p>
+            <p>LinkedIn: <a href="https://linkedin.com/in/gabriel--castro" target="_blank">linkedin.com/in/seu-perfil</a></p>
         </section>
     </main>
 
