--- a/index.html
+++ b/index.html
@@ -1,64 +1,89 @@
-# git commit -am "Descrição das mudanças"
-# git push origin main
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styes.css">
     <title>Gabriel Castro | Portfólio</title>
 </head>
 <body>
+    <div class="particulas"></div>
 
-    <header>
+    <nav class="navegacao ">
+        <ul class="menu">
+            <li>
+                <a href="#inicio" class="menu-link">Início</a>
+            </li>
+            <li>
+                <a href="#sobre" class="menu-link">Sobre</a>
+            </li>
+            <li>
+                <a href="#projetos" class="menu-link">Projetos</a>
+            </li>
+            <li>
+                <a href="#contato" class="menu-link">Contato</a>
+            </li>
+        </ul>
+    </nav>
+
+    <main id="inicio" class="cabecalho">
+        <img src="img/perfil.jpg" alt="Foto de Gabriel Castro" class="foto-perfil">
         <h1>Gabriel Castro</h1>
-        <p>Desenvolvedor | Freelancer</p>
-        <nav>
-            <ul>
-                <li><a href="#sobre">Sobre</a></li>
-                <li><a href="#projetos">Projetos</a></li>
-                <li><a href="#habilidades">Habilidades</a></li>
-                <li><a href="#contato">Contato</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <main>
-        <section id="sobre">
-            <h2>Sobre Mim</h2>
-            <p>Sou Gabriel Castro, desenvolvedor apaixonado por tecnologia e inovação. Tenho experiência em diversas áreas da programação e estou sempre buscando novos desafios.</p>
-        </section>
-
-        <section id="projetos">
-            <h2>Projetos</h2>
-            <ul>
-                <li><strong>Projeto 1:</strong> Descrição do projeto.</li>
-                <li><strong>Projeto 2:</strong> Descrição do projeto.</li>
-                <li><strong>Projeto 3:</strong> Descrição do projeto.</li>
-            </ul>
-        </section>
-
-        <section id="habilidades">
-            <h2>Habilidades</h2>
-            <ul>
-                <li>Desenvolvimento Web (HTML, CSS, JavaScript)</li>
-                <li>Programação (Python, Java, C++)</li>
-                <li>Banco de Dados (MySQL, PostgreSQL)</li>
-                <li>Criação de Bots e Automação</li>
-            </ul>
-        </section>
-
-        <section id="contato">
-            <h2>Contato</h2>
-            <p>Email: <a href="mailto:g_castro2001@hotmail.com">seuemail@example.com</a></p>
-            <p>GitHub: <a href="https://github.com/castruti" target="_blank">github.com/castruti</a></p>
-            <p>LinkedIn: <a href="https://linkedin.com/in/gabriel--castro" target="_blank">linkedin.com/in/seu-perfil</a></p>
-        </section>
+        <p class="cabecalho-sub-titulo">Analista e Desenvolvedor de Dados (BI & Bancos de Dados)</p>
     </main>
 
-    <footer>
-        <p>&copy; 2025 Gabriel Castro. Todos os direitos reservados.</p>
-    </footer>
+    <section id="sobre" class="sobre">
+        <h2 class="sobre-titulo">Sobre Mim</h2>
+        <div class="sobre-caixa">
+            <p class="sobre-paragrafo">
+                Desenvolvedor de Business Intelligence com atuação em análise de dados, construção de dashboards e consultas em bancos de dados. Experiência em transformar dados em informações claras para apoio à tomada de decisão, com foco em organização, performance e visualização.
+            </p>
+        </div>
+    </section>
+
+    <section id="projetos" class="projetos">
+        <h2 class="projetos-titulo">Meus Projetos</h2>
+        <div class="projetos-caixa">
+            <div class="projetos-card">
+                <img src="img/snoopy1.webp" alt="Projeto 1" class="projetos-imagem">
+                <div class="caixa-textos-projeto">
+                    <h3 class="info-projetos">Projeto 1</h3>
+                    <p class="paragrafo-projetos">Descrição do projeto 1</p>
+                </div>
+            </div>
+
+            <div class="projetos-card">
+                <img src="img/snoopy2.webp" alt="Projeto 1" class="projetos-imagem">
+                <div class="caixa-textos-projeto">
+                    <h3 class="info-projetos">Projeto 2</h3>
+                    <p class="paragrafo-projetos">Descrição do projeto 2</p>
+                </div>
+            </div>
+
+            <div class="projetos-card">
+                <img src="img/snoopy3.jpg" alt="Projeto 1" class="projetos-imagem">
+                <div class="caixa-textos-projeto">
+                    <h3 class="info-projetos">Projeto 3</h3>
+                    <p class="paragrafo-projetos">Descrição do projeto 3</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="contato" class="contatos">
+        <h2 class="contatos-titulo">Contatos</h2>
+        <div class="contatos-caixa">
+            <p class="paragrafo-contatos">
+                <a href="mailto:g_castro2001@hotmail.com">g_castro2001@hotmail.com</a>
+            </p>
+            <p class="paragrafo-contatos">
+                <a href="https://github.com/castruti" target="_blank" rel="noopener">github.com/castruti</a>
+            </p>
+            <p class="paragrafo-contatos">
+                <a href="https://www.linkedin.com/in/gabriel--castro" target="_blank" rel="noopener">linkedin.com/in/gabriel--castro</a>
+            </p>
+        </div>
+    </section>
 
 </body>
 </html>
