--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </nav>
 
     <main id="inicio" class="cabecalho">
-        <img src="img/perfil.jpg" alt="Foto de Gabriel Castro" class="foto-perfil">
+        <img src="perfil.jpg" alt="Foto de Gabriel Castro" class="foto-perfil">
         <h1>Gabriel Castro</h1>
         <p class="cabecalho-sub-titulo">Analista e Desenvolvedor de Dados (BI & Bancos de Dados)</p>
     </main>
@@ -45,7 +45,7 @@
         <h2 class="projetos-titulo">Meus Projetos</h2>
         <div class="projetos-caixa">
             <div class="projetos-card">
-                <img src="img/snoopy1.webp" alt="Projeto 1" class="projetos-imagem">
+                <img src="snoopy1.webp" alt="Projeto 1" class="projetos-imagem">
                 <div class="caixa-textos-projeto">
                     <h3 class="info-projetos">Projeto 1</h3>
                     <p class="paragrafo-projetos">Descrição do projeto 1</p>
@@ -53,7 +53,7 @@
             </div>
 
             <div class="projetos-card">
-                <img src="img/snoopy2.webp" alt="Projeto 1" class="projetos-imagem">
+                <img src="snoopy2.webp" alt="Projeto 1" class="projetos-imagem">
                 <div class="caixa-textos-projeto">
                     <h3 class="info-projetos">Projeto 2</h3>
                     <p class="paragrafo-projetos">Descrição do projeto 2</p>
@@ -61,7 +61,7 @@
             </div>
 
             <div class="projetos-card">
-                <img src="img/snoopy3.jpg" alt="Projeto 1" class="projetos-imagem">
+                <img src="snoopy3.jpg" alt="Projeto 1" class="projetos-imagem">
                 <div class="caixa-textos-projeto">
                     <h3 class="info-projetos">Projeto 3</h3>
                     <p class="paragrafo-projetos">Descrição do projeto 3</p>
